# PaddleNLP

./: .clang-format  .clang_format.hook  .copyright.hook  .flake8  .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .readthedocs.yaml  .style.yapf  1.txt  104RFC.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_cn.md  CONTRIBUTING.md  CONTRIBUTING_cn.md  LICENSE  Makefile  NOTICE  PaddleNLP_FAQ.md  README-new.md  README.md  README_cn.md  README_en.md  UIE.md  compare.py  env.sh  hubconf.py  infer_llama_npu.sh  m3e_retriever.py  nohup.out  pyproject.toml  qa.txt  real_time_save.temp_ids_rank_0_step_1  real_time_save.temp_ids_rank_0_step_10  real_time_save.temp_ids_rank_0_step_11  real_time_save.temp_ids_rank_0_step_12  real_time_save.temp_ids_rank_0_step_13  real_time_save.temp_ids_rank_0_step_14  real_time_save.temp_ids_rank_0_step_15  (+27 more)
docs/: FAQ.md  (+32 more)
examples/code_generation/codegenJupyterLabExt/: .gitignore  .prettierignore  LICENSE  MANIFEST.in  README.md  RELEASE.md  install.json  jest.config.js  package-lock.json  package.json  pyproject.toml
exp_fasttokenizer/: CMakeLists.txt
exp_fasttokenizer/src/: tokenizer.cpp  tokenizer.h
fast_tokenizer/: CMakeLists.txt  FastTokenizer.cmake  FastTokenizer.cmake.in  LICENSE  Makefile  README.md  icu_filters.json  run_build_android_armv7_lib.sh  run_build_android_armv7_lite_lib.sh  run_build_android_armv8_lib.sh  run_build_android_armv8_lite_lib.sh  run_build_cpp_lib.bat  run_build_cpp_lib.sh  run_build_py_lib.bat  run_build_py_lib.sh  run_fast_tokenizer_cpp_test.sh  setup.py
fast_tokenizer/cmake/: ByproductsICU.cmake  third_party.cmake
fast_tokenizer/docs/: README.md
fast_tokenizer/docs/compile/: README.md  how_to_build_android.md  how_to_build_linux_and_mac.md  how_to_build_windows.md
fast_tokenizer/docs/cpp/: README.md
fast_tokenizer/docs/pipeline/: README.md
fast_tokenizer/docs/python/: README.md
fast_tokenizer/examples/: clip_fast_tokenizer_demo.cc
fast_tokenizer/examples/clip/: CMakeLists.txt  clip_fast_tokenizer_demo.cc
fast_tokenizer/examples/ernie-3.0/: CMakeLists.txt  README.md
fast_tokenizer/fast_tokenizer/: CMakeLists.txt
fast_tokenizer/fast_tokenizer/core/: CMakeLists.txt  added_vocabulary.cc  added_vocabulary.h  base.cc  base.h  encoding.cc  encoding.h  tokenizer.cc  tokenizer.h
fast_tokenizer/fast_tokenizer/decoders/: CMakeLists.txt  decoder.h  decoders.h  wordpiece.cc  wordpiece.h
fast_tokenizer/fast_tokenizer/demo/: CMakeLists.txt  README.md  clip_fast_tokenizer_demo.cc  ernie_fast_tokenizer_demo.cc
fast_tokenizer/fast_tokenizer/models/: CMakeLists.txt  bpe.cc  bpe.h  fast_wordpiece.cc  fast_wordpiece.h  model.h  models.h  unigram.cc  unigram.h  wordpiece.cc  wordpiece.h
fast_tokenizer/fast_tokenizer/normalizers/: CMakeLists.txt  bert.cc  bert.h  normalizer.cc  normalizer.h  normalizers.h  precompiled.cc  precompiled.h  replace.cc  replace.h  strip.cc  strip.h  unicode.cc  unicode.h  utils.cc  utils.h
fast_tokenizer/fast_tokenizer/postprocessors/: CMakeLists.txt  bert.cc  bert.h  byte_level.cc  byte_level.h  postprocessor.cc  postprocessor.h  postprocessors.h  roberta.cc  roberta.h  template.cc  template.h
fast_tokenizer/fast_tokenizer/pretokenizers/: CMakeLists.txt  bert.cc  bert.h  byte_level.cc  byte_level.h  metaspace.cc  metaspace.h  pretokenizer.cc  pretokenizer.h  pretokenizers.h  sequence.cc  sequence.h  split.cc  split.h  whitespace.cc  whitespace.h  whitespace_and_punctuation.cc  whitespace_and_punctuation.h  whitespace_split.cc  whitespace_split.h
fast_tokenizer/fast_tokenizer/pybind/: CMakeLists.txt  core.cc  core.h  decoders.cc  decoders.h  exception.cc  exception.h  models.cc  models.h  normalizers.cc  normalizers.h  postprocessors.cc  postprocessors.h  pretokenizers.cc  pretokenizers.h  pybind.cc  tokenizers.cc  tokenizers.h  utils.cc  utils.h
fast_tokenizer/fast_tokenizer/test/: CMakeLists.txt  test_bert_pretokenizer.cc  test_bert_tokenizer.cc  test_clip_fast_tokenizer.cc  test_ernie_fast_tokenizer.cc  test_fast_wordpiece.cc  test_normalizer.cc  test_replace.cc  test_roberta_postprocessor.cc  test_split_pretokenizer.cc  test_strip.cc  test_unicode.cc  test_utils.cc  test_whitespace.cc  test_wordpiece.cc  utils.h
fast_tokenizer/fast_tokenizer/tokenizers/: clip_fast_tokenizer.cc  clip_fast_tokenizer.h  ernie_fast_tokenizer.cc  ernie_fast_tokenizer.h
fast_tokenizer/fast_tokenizer/utils/: cache.h  failure.cc  failure.h  lattice.cc  lattice.h  path.h  sentencepiece_normalizer.cc  sentencepiece_normalizer.h  shared_mutex.h  string_view.h  trie.cc  trie.h  unique_ptr.h  utf8.h  utils.cc  utils.h  variant.h
fast_tokenizer/perf/: README.md  perf.py  run_all_perf.sh
fast_tokenizer/python/: CMakeLists.txt
fast_tokenizer/python/fast_tokenizer/: __init__.py  c_wrap.py
fast_tokenizer/python/tests/: test_byte_level_pretokenizer.py  test_clip_tokenizer.py  test_fast_wordpiece.py  test_tokenizer_json.py
faster_tokenizer/: CMakeLists.txt  FasterTokenizer.cmake  README.md  run_build_cpp_lib.bat  run_build_cpp_lib.sh  run_build_py_lib.bat  run_build_py_lib.sh  setup.py
faster_tokenizer/cmake/: ByproductsICU.cmake  FindNumPy.cmake  generic.cmake  python_module.cmake  third_party.cmake
faster_tokenizer/docs/compile/: README.md  how_to_build_linux_and_mac.md  how_to_build_windows.md
faster_tokenizer/faster_tokenizer/: CMakeLists.txt
faster_tokenizer/faster_tokenizer/core/: CMakeLists.txt  added_vocabulary.cc  added_vocabulary.h  base.h  encoding.cc  encoding.h  tokenizer.cc  tokenizer.h
faster_tokenizer/faster_tokenizer/decoders/: decoder.h  decoders.h  wordpiece.cc  wordpiece.h
faster_tokenizer/perf/: README.md  perf.py
faster_tokenizer/python/: CMakeLists.txt
faster_tokenizers/: CMakeLists.txt  LICENSE  setup.py
faster_tokenizers/cmake/: dummy.c.in  generic.cmake  third_party.cmake
faster_tokenizers/perf/: perf.py
faster_tokenizers/python/: CMakeLists.txt
paddlenlp/ext_op/: CMakeLists.txt  README.md  __init__.py
paddlenlp/ops/: CMakeLists.txt  Makefile  README.md  __init__.py  einsum.py  ext_utils.py  functional.py  setup.py  strings.py
(+15071 files in other folders)
